--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "mysql": "^2.16.0",
+    "typeahead": "^0.2.2",
+    "typeahead.js": "^0.11.1",
     "xml-parser": "^1.2.1",
     "xml2js": "^0.4.19"
   }
