--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
+    "jquery-mask-plugin": "^1.14.15",
     "mongodb": "^3.1.3",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
