--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "mysql": "^2.16.0",
+    "pdfmake": "^0.1.39",
     "typeahead": "^0.2.2",
     "typeahead.js": "^0.11.1",
     "xml-parser": "^1.2.1",
